# CondaPkgDirToRepo

./: .flake8  README.md  pyproject.toml
CondaPkgDirToRepo/: CondaPkgDirToRepoMain.py  __init__.py
conda-recipe/: meta.yaml
tests/: test_CondaPkgDirToRepoMain.py
tests/inputs/: testpackage.tar.bz2
tests/inputs/sample_walk_package_dir_dir/1/info/: repodata_record.json
