[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "CondaPkgDirToRepo"
authors = [{name = "Timo Strunk", email = "timo.strunk@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "click",
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Documentation = ""
Source = ""

[project.scripts]
CondaPkgDirToRepo = "CondaPkgDirToRepo.CondaPkgDirToRepoMain:main"

[tool.black]
line-length = 120
target-version = ['py37', 'py38','py39','py310']

[tool.isort]
profile = "black"

